fix header input overflow

--- a/css/glyphical.css
+++ b/css/glyphical.css
@@ -20,98 +20,67 @@ body {
   background-position: fixed;
   background-size: cover;
   max-width: 100%;
-  
-  & #glyphical-header {
-    display: grid;
-    grid-template:
-      "nav nav"
-      "logo search"
-    / auto 1fr;
-    gap: 1em;
-    justify-content: space-between;
-    border-block-end: 1px solid var(--papyrus-800);
-    box-shadow: -3px 4px 4px var(--papyrus-900);
-    padding-bottom: 1em;
+}
 
-    & form {
-      display: grid;
-      flex-grow: 1;
-      margin: 0;
-      padding: 0;
+& #glyphical-header {
+  display: flex;
+  gap: 1em;
+  justify-content: space-between;
+  border-block-end: 1px solid var(--papyrus-800);
+  box-shadow: -3px 4px 4px var(--papyrus-900);
+  padding: 0 1em;
+
+  & form {
+    display: grid;
+    flex-grow: 1;
+    align-content: center;
+
+    & input[type=search] {
+      font-size: 2rem;
     }
-    
-    
+  }
+
+
   & nav a {
-    color:white;
+    color: white;
     text-decoration: none;
   }
 
-  &  h1 {
-    flex-grow: 1;
+  & h1 {
+    /*! flex-grow: 1; */
     margin: 0;
     display: flex;
     align-items: center;
   }
 
 
-    @media (max-width: 768px) {
-      & form {
-        display: flex;
-        /* flex-grow: 1; */
-        margin: 0;
-        padding: 0;
-      }
-      
-      & h1 .hieroglyph {
-        font-size: 2rem;
-      }
+  @media (max-width: 768px) {
+    & form {
+      display: flex;
+      margin: 0;
+      padding: .2em;
 
-      & h1 {
-        font-size: 1rem;
-      }
-
-      & {
-        display: grid;
-      }
-
-      & input[type="search"]::placeholder {
-        text-align: start;
+      & input[type="search"] {
         font-size: 1rem;
       }
     }
 
-    nav-bar {
-      grid-area: nav;
-      nav {
-        display: flex;
-        justify-content: center;
-        gap: 4em;
-        background: var(--maroon-850);
+    & h1 .hieroglyph {
+      font-size: 2rem;
+    }
 
-        a {
-          color:var(--papyrus-100);
-          text-decoration: none;
-          ;
+    & h1 {
+      font-size: 1rem;
+    }
 
-        }
-      }
+    & input[type="search"] {
+      flex: 1;
+    }
+
+    & input[type="search"]::placeholder {
+      text-align: start;
+      font-size: 1rem;
     }
   }
-  
-  
-}
 
-
-body #glyphical-header form input {
-  display: grid;
-  flex-grow: 1;
-  align-self: center;
-  font-size: 2rem;
-  padding: .4rem;
-}
-
-
-
-body #glyphical-header form input::placeholder {
-  text-align: right;
 }
